--- a/views/domain-remainder/index.ejs
+++ b/views/domain-remainder/index.ejs
@@ -84,11 +84,14 @@
                                             <td><%= domain.expiration_date %></td>
                                             <td><%= domain.activity %></td>
                                             <td class="d-flex flex-column">
-                                                <button type="button" class="btn btn-danger mb-3"  onclick="deleteDomain('<%= domain._id %>')">
-                                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6" style="height: 18px;">
-                                                        <path stroke-linecap="round" stroke-linejoin="round" d="M20.25 7.5l-.625 10.632a2.25 2.25 0 01-2.247 2.118H6.622a2.25 2.25 0 01-2.247-2.118L3.75 7.5M10 11.25h4M3.375 7.5h17.25c.621 0 1.125-.504 1.125-1.125v-1.5c0-.621-.504-1.125-1.125-1.125H3.375c-.621 0-1.125.504-1.125 1.125v1.5c0 .621.504 1.125 1.125 1.125z" />
-                                                    </svg>
-                                                </button>
+                                                <form action="/domains/<%= domain._id %>" method="POST">
+                                                    <button type="submit" class="btn btn-danger mb-3">
+                                                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6" style="height: 18px;">
+                                                            <path stroke-linecap="round" stroke-linejoin="round" d="M20.25 7.5l-.625 10.632a2.25 2.25 0 01-2.247 2.118H6.622a2.25 2.25 0 01-2.247-2.118L3.75 7.5M10 11.25h4M3.375 7.5h17.25c.621 0 1.125-.504 1.125-1.125v-1.5c0-.621-.504-1.125-1.125-1.125H3.375c-.621 0-1.125.504-1.125 1.125v1.5c0 .621.504 1.125 1.125 1.125z" />
+                                                        </svg>
+                                                    </button>
+                                                </form>
+                                               
                                                 <button type="button" class="btn btn-warning"  >
                                                     <a href="/edit-domain/<%= domain._id %>">
                                                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6" style="height: 18px;">
@@ -127,26 +130,7 @@
             expirationDateInput.value = expirationDateValue;
             activitySelect.value = activityValue;
         });
-
-        function deleteDomain(domainId) {
-            if (confirm("Are you sure you want to delete this domain?")) {
-                fetch(`/domains/${domainId}`, {
-                    method: 'DELETE',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                })
-                .then(response => {
-                    if (response.status === 204) {
-                        // Doğrudan sayfayı yenile
-                        window.location.reload();
-                    } else {
-                        return response.json();
-                    }
-                })
-                .catch(error => console.error('Error:', error));
-            }
-        }
+ 
     </script>
       
 <%- include('../includes/end.ejs') %>
